syntax = "proto3";

//python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. yolo.proto

package yolo;

service YOLOservice {
  rpc TrackSequence(YOLOGradioSeq) returns (YOLOGradioSeq);
  rpc DetectSequence(YOLOGradioSeq) returns (YOLOGradioSeq);
  rpc AllProcessing(YOLOGradioSeq) returns (YOLOGradioSeq);
}

message YOLOGradioSeq {
  string yolo_config_json = 1;
  repeated bytes images = 2;
  bytes video = 3;
}

