syntax = "proto3";

package yolo;

service YOLOservice {
  rpc Detect (YOLORequest) returns (YOLOResponse);
  rpc Track (YOLOTrackRequest) returns (YOLOResponse);
}

message YOLORequest {
  bytes image = 1;
  float confidence_threshold = 2;
}

message YOLOResponse {
  bytes labeled_image = 1;
  string detections_json = 2;
}
message YOLOTrackRequest {
  bytes image = 1;              // JPEG image frame
  string track_config_json = 2; // JSON string with YOLO tracking args
}